--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,16 @@
-version: '3.8'
+version: '3.3'
 
 services:
-  nextjs:
+  frontend:
     build:
       context: .
       dockerfile: Dockerfile
-    ports:
-      - "3000:3000"
-    environment:
-      NODE_ENV: production
-    restart: unless-stopped
     networks:
       - app-network
+    environment:
+      - NODE_ENV=production
+    restart: unless-stopped
 
 networks:
   app-network:
-    driver: bridge
+    external: true
