--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,8 @@ services:
     environment:
       - NODE_ENV=production
     restart: unless-stopped
+    ports:
+      - "3000:3000"
 
 networks:
   app-network:
-    external: true
