--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_API_URL=http://localhost:5000
-NEXT_PUBLIC_API_BASE_URL=http://localhost:5000
+NEXT_PUBLIC_API_URL=https://twitter-x-be.up.railway.app
+NEXT_PUBLIC_API_BASE_URL=https://twitter-x-be.up.railway.app
